# pizero_bikecomputer

./: .gitignore  .pre-commit-config.yaml  Containerfile  README.md  logger.py  map.yaml  pizero_bikecomputer.py  pyproject.toml
doc/: hardware_installation.md  software_installation.md
layouts/: layout-vertical.yaml  layout.yaml
modules/: _pyqt.py  button_config.py  config.py  config_parser.py  constants.py  course.py  gui_config.py  gui_pyqt.py  item_config.py  logger_core.py  sensor_core.py  state.py
modules/display/: display_core.py  mip_display.py  mip_display_base.py  mip_display_pigpio.py  mip_sharp_display.py  st7789_display.py
modules/display/cython/: mip_display.cpp  mip_display.hpp  mip_helper.pyx
modules/helper/: api.py  ble_gatt_server.py  bt_pan.py  network.py  rwgps.py  setting.py
modules/items/: __init__.py  base.py  general.py
modules/items/ant/: __init__.py
modules/items/gps/: __init__.py
modules/items/i2c/: __init__.py
modules/loaders/: tcx.py
modules/logger/: loader_tcx.py  logger_csv.py  logger_fit.py
modules/pyqt/: pyqt_button_box_widget.py  pyqt_cuesheet_widget.py  pyqt_graph_debug.py  pyqt_item.py  pyqt_multiscan_widget.py  pyqt_screen_widget.py
modules/sensor/: kalman_filter.py  sensor.py  sensor_ant.py  sensor_gpio.py  sensor_gps.py  sensor_i2c.py
modules/settings/: __init__.py  ant.py
modules/utils/: array.py  date.py  formatter.py  geo.py  map.py  mbutils.py  network.py  pa1010d-pty.py  pa1010d.py  timer.py  w_prime_balance.py
reqs/: full.in  full.txt  min.in  min.txt
tests/: test_course.py  test_logger.py
(+50 files in other folders)
